[package]
name = "adfs-rs"
version = "0.1.1"
edition = "2024"
license = "MIT"
author = "revolko (Juraj Paluba)"
description = "AWS ADFS CLI manager"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "cookies"] }
base64 = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = { version = "0.8" }
toml = { version = "0.9" }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.86.0"
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
